<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Item untuk logout -->
    <item
        android:id="@+id/action_language"
        android:title="@string/language_setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_map"
        android:title="maps"
        app:showAsAction="always"
        android:icon="@drawable/baseline_map_24"
        />


</menu>